--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "serve": "webpack serve --open --config webpack.dev.config.js",
     "watch": "tsc -w"
   },
   "author": "marc gruber",
@@ -18,6 +19,7 @@
     "@types/d3": "^7.4.3",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -26,6 +28,7 @@
     "typescipt": "^1.0.0",
     "typescript": "^5.6.3",
     "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
