--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack --config webpack.dev.config.js",
     "serve": "webpack serve --open --config webpack.dev.config.js",
     "watch": "tsc -w"
   },
@@ -19,6 +19,7 @@
     "@types/d3": "^7.4.3",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
+    "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
